--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://127.0.0.1:27017/min10pro
+MONGO_URI=mongodb+srv://aravind75024:qaQJZhNp0BFskwGr@aravind.wqfjx8y.mongodb.net/
 PORT=8000
