--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://aravind75024:qaQJZhNp0BFskwGr@aravind.wqfjx8y.mongodb.net/
-PORT=8000
+MONGO_URI=mongodb+srv://mechanicpro2k25:iJD0EtFA3HlvsaEW@cluster0.lvo9p5s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=8080
